[gd_scene load_steps=6 format=2]

[ext_resource path="res://source/menu/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://source/menu/MenuButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://fonts/architect-s-daughter/ArchitectsDaughter.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://graphics/images/background.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 64
extra_spacing_top = -5
extra_spacing_bottom = -20
font_data = ExtResource( 3 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -205.0
margin_top = 60.0
margin_right = 205.0
margin_bottom = 146.0
custom_fonts/font = SubResource( 1 )
text = "Elementary"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 558.0
margin_top = 266.0
margin_right = 721.0
margin_bottom = 454.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="LineEdit" parent="VBoxContainer"]
visible = false
margin_right = 163.0
margin_bottom = 24.0
text = "1"

[node name="Play" parent="VBoxContainer" instance=ExtResource( 2 )]
margin_right = 163.0
margin_bottom = 60.0
text = "PLAY"

[node name="Editor" parent="VBoxContainer" instance=ExtResource( 2 )]
visible = false
margin_top = 64.0
margin_right = 163.0
margin_bottom = 124.0
text = "EDITOR"

[node name="Credits" parent="VBoxContainer" instance=ExtResource( 2 )]
margin_top = 64.0
margin_right = 163.0
margin_bottom = 124.0
text = "CREDITS"

[node name="Quit" parent="VBoxContainer" instance=ExtResource( 2 )]
margin_top = 128.0
margin_right = 163.0
margin_bottom = 188.0
text = "QUIT"
[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="VBoxContainer/Editor" to="." method="_on_Editor_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
